--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
             <div class="header-text">
                 <p>COMPUTER ENGINEER</p>
-                <h1>Hi, I'm <br><span>Christianber</span><br>From Manila</h1>
+                <h1>Hi, I'm <br><span>Christianber</span><br>From Caloocan</h1>
 
             </div>
         </div>
@@ -48,11 +48,11 @@
                         solutions. </p>
 
                     <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                        <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('Experience')">Experience</p>
+                        <p class="tab-links" onclick="opentab('Education')">Education</p>
                     </div>
-                    <div class="tab-contents active-tab" id="skills">
+                    <div class="tab-contents active-tab" id="Skills">
                         <ul>
                             <li><span>Hardware Engineer</span><br> Design and Develop Computer Systems and their
                                 Physical Components</li>
@@ -62,14 +62,14 @@
                             <li><span> UI/UX</span><br>Designing Web/App interfaces</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="experience">
+                    <div class="tab-contents" id="Experience">
                         <ul>
                             <li><span>2023</span><br>Full Stack Developer </li>
                             <li><span>2022</span><br>Software Engineer </li>
                             <li><span>2021</span><br>Hardware Engineer</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="education">
+                    <div class="tab-contents" id="Education">
                         <ul>
                             <li><span>2019 - 2024</span><br>College BS Computer Engineering at Universidad de Manila
                             </li>
