--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Ber Studio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/59e5fd6560.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="svg" href="images/logo.png" />
+    <link rel="icon" type="svg" href="images/Humen Being.png" />
 </head>
 <body>
     <div id="header">
@@ -41,34 +41,28 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Passionate and dedicated Computer Engineering professional with a strong foundation in both
-                        hardware and software systems. I thrive in dynamic and collaborative environments, where my
-                        analytical mindset and problem-solving skills shine. With a keen eye for innovation and an
-                        insatiable curiosity, I am driven to push the boundaries of technology and create impactful
-                        solutions. </p>
+                    <p>Hello! My name is Christianber Say Romero, and I am a recent graduate with a passion for web development. 
+                        With a foundational skill set in front-end development, I have cultivated a love for creating engaging and functional websites. 
+                        My enthusiasm for learning drives me to continuously expand my knowledge and adapt to the ever-evolving landscape of web development. 
+                        I am eager to deepen my expertise and embrace new challenges, aiming to become a proficient web developer who can contribute meaningfully to dynamic projects.
+                         I am excited about the opportunity to grow, innovate, and make a positive impact in the world of web development. </p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('Experience')">Experience</p>
+                       
                         <p class="tab-links" onclick="opentab('Education')">Education</p>
                     </div>
                     <div class="tab-contents active-tab" id="Skills">
                         <ul>
-                            <li><span>Hardware Engineer</span><br> Design and Develop Computer Systems and their
-                                Physical Components</li>
-                            <li><span>Technical Support Specialist</span><br> Troubleshooting Experts and Handle a Broad
-                                Range of Technical Complications such as Connection Issues and Unresponsive
-                                Applications.</li>
-                            <li><span> UI/UX</span><br>Designing Web/App interfaces</li>
+                            <li><span>HTML</span><br> 
+                                90%</li>
+                            <li><span>CSS</span><br> 
+                                85%</li>
+                            <li><span> UI/UX</span><br>
+                            80%</li>
                         </ul>
                     </div>
-                    <div class="tab-contents" id="Experience">
-                        <ul>
-                            <li><span>2023</span><br>Full Stack Developer </li>
-                            <li><span>2022</span><br>Software Engineer </li>
-                            <li><span>2021</span><br>Hardware Engineer</li>
-                        </ul>
-                    </div>
+                   
                     <div class="tab-contents" id="Education">
                         <ul>
                             <li><span>2019 - 2024</span><br>College BS Computer Engineering at Universidad de Manila
@@ -89,29 +83,27 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Web Design</h2>
-                    <p>A web design service provides you with a customized website design that's perfect for your
-                        business or personal site. They'll work with you to create a design that matches your brand,
-                        while giving your customers a seamless user experience that will delight them.
+                    <h2>Front-end Development</h2>
+                    <p>focuses on the client side of web development, involving the creation of user interfaces, interactivity, 
+                        and visual elements using HTML, CSS, and JavaScript.
                     </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop"></i>
-                    <h2>UI/UX Design</h2>
-                    <p>UI UX designers create the user interface for an app, website, or other interactive media. Their
-                        work includes collaborating with product managers and engineers to gather requirements from
-                        users before designing ideas that can be communicated using storyboards. They also process flows
-                        or sitemaps.
+                    <h2>Back-end Development</h2>
+                    <p>Back-end development deals with the server side of web development,
+                         managing databases, handling data processing, and integrating server-side 
+                         technologies such as PHP, Python, Node.js.
                     </p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>App Design</h2>
-                    <p>The idea is to make an information structure and create an interactive pattern out of it. It
-                        helps in the UI and UX development process, while clickable prototypes are analyzed and included
-                        to offer seamless user experience.
+                    <h2>Full-stack Development</h2>
+                    <p>Full-stack developers possess front-end and back-end development skills, 
+                        enabling them to handle end-to-end development processes and build fully 
+                        functional web applications.
                     </p>
                     <a href="#">Learn more</a>
                 </div>
